--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,6 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/js/book/App/App.js": "/js/book/App/App.js",
+    "/js/book/Index/Index.js": "/js/book/Index/Index.js"
 }
